[package]
name = "claude2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.19"
env_logger = "0.10"
chrono = "0.4"
bytes = "1.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version="0.11", features = ["socks","native-tls-alpn","json","stream","multipart"]}
tokio = { version = "1.29", features = ["rt", "net", "test-util", "macros"]}
tokio-util = {version="0.7", features = ["codec"]}

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
